--- a/1.html
+++ b/1.html
@@ -86,7 +86,7 @@
     <script>
         function pad2(n) { return String(n).padStart(2, '0'); }
         function toUtcIcsDateTime(date) {
-            const iso = new Date(date.getTime() - date.getTimezoneOffset() * 60000).toISOString();
+            const iso = date.toISOString();
             return iso.replace(/[-:]/g, '').replace(/\.\d{3}Z$/, 'Z');
         }
         function toIcsDate(date) {
