--- a/1.html
+++ b/1.html
@@ -2,391 +2,11 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="color-scheme" content="light dark">
-	<title>Конфигуратор события (.ics, Google/Outlook)</title>
-	<style>
-		:root {
-			--bg: #fafafa;
-			--bg-accent: #f3f4f6;
-			--card: #ffffff;
-			--text: #111827;
-			--muted: #6b7280;
-			--border: #e5e7eb;
-			--ring: rgba(37, 99, 235, 0.35);
-			--primary: #2563eb;
-			--primary-hover: #1d4ed8;
-			--btn-text: #ffffff;
-			--input-bg: #ffffff;
-			--shadow: 0 1px 2px rgba(0,0,0,.06), 0 8px 24px rgba(0,0,0,.06);
-		}
-		html[data-theme="dark"] {
-			--bg: #0b0e12;
-			--bg-accent: #0f141b;
-			--card: #0f141b;
-			--text: #e5e7eb;
-			--muted: #9ca3af;
-			--border: #1f2937;
-			--ring: rgba(59, 130, 246, 0.45);
-			--primary: #3b82f6;
-			--primary-hover: #2563eb;
-			--btn-text: #0b0e12;
-			--input-bg: #0b0e12;
-			--shadow: 0 1px 2px rgba(0,0,0,.4), 0 12px 32px rgba(0,0,0,.35);
-		}
-		@media (prefers-color-scheme: dark) {
-			html:not([data-theme]) {
-				color-scheme: dark;
-			}
-		}
-
-		body {
-			font-family: -apple-system, system-ui, Segoe UI, Roboto, Arial, sans-serif;
-			margin: 0;
-			color: var(--text);
-			background: radial-gradient(1200px 800px at 10% -20%, var(--bg-accent), transparent),
-				radial-gradient(1200px 800px at 110% -10%, var(--bg-accent), transparent),
-				var(--bg);
-		}
-		.container { max-width: 800px; margin: 32px auto; padding: 0 16px; }
-		.topbar { display: flex; align-items: center; justify-content: space-between; gap: 12px; margin-bottom: 16px; }
-		h1 { font-size: 22px; margin: 0; letter-spacing: -0.01em; }
-
-		.card { background: var(--card); border: 1px solid var(--border); border-radius: 14px; padding: 18px; box-shadow: var(--shadow); }
-		.row { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
-		@media (max-width: 640px) { .row { grid-template-columns: 1fr; } }
-
-		label { display: block; font-size: 13px; color: var(--muted); margin-bottom: 6px; }
-		input[type="text"], input[type="date"], input[type="time"], select, textarea {
-			width: 100%; box-sizing: border-box; padding: 10px 12px; border: 1px solid var(--border);
-			border-radius: 10px; background: var(--input-bg); color: var(--text); font-size: 14px;
-			outline: none; transition: border-color .15s ease, box-shadow .15s ease, background-color .2s ease;
-		}
-		textarea { min-height: 96px; resize: vertical; }
-		input:focus, select:focus, textarea:focus { border-color: var(--primary); box-shadow: 0 0 0 3px var(--ring); }
-
-		.actions { display: flex; gap: 8px; flex-wrap: wrap; margin-top: 14px; }
-		.btn { appearance: none; border: 1px solid var(--primary); background: var(--primary); color: var(--btn-text);
-			padding: 10px 14px; border-radius: 10px; font-weight: 700; font-size: 14px; cursor: pointer;
-			transition: transform .05s ease, background-color .15s ease, border-color .15s ease, box-shadow .15s ease; }
-		.btn:hover { background: var(--primary-hover); border-color: var(--primary-hover); }
-		.btn:active { transform: translateY(1px); }
-		.btn.secondary { background: transparent; color: var(--text); border-color: var(--border); }
-		.btn.secondary:hover { border-color: var(--primary); box-shadow: 0 0 0 3px var(--ring); }
-
-		a.btn-link { display: inline-block; text-decoration: none; border: 1px solid var(--border); background: transparent; color: var(--text);
-			padding: 10px 14px; border-radius: 10px; font-weight: 700; font-size: 14px; transition: border-color .15s ease, box-shadow .15s ease; }
-		a.btn-link:hover { border-color: var(--primary); box-shadow: 0 0 0 3px var(--ring); }
-
-		.muted { color: var(--muted); font-size: 13px; margin-top: 8px; }
-		.hidden { display: none; }
-		.result { margin-top: 16px; padding-top: 12px; border-top: 1px solid var(--border); }
-
-		.icon-btn { border: 1px solid var(--border); background: transparent; color: var(--text); border-radius: 999px; padding: 8px 10px; cursor: pointer; font-size: 16px; line-height: 1; }
-		.icon-btn:hover { border-color: var(--primary); box-shadow: 0 0 0 3px var(--ring); }
-
-		.switch { display: flex; align-items: center; gap: 10px; margin-top: 8px; }
-		.switch input[type="checkbox"] { appearance: none; width: 44px; height: 26px; background: var(--border); border: 1px solid var(--border); border-radius: 9999px; position: relative; cursor: pointer; transition: background .2s ease, border-color .2s ease; }
-		.switch input[type="checkbox"]::after { content: ""; position: absolute; top: 3px; left: 3px; width: 20px; height: 20px; background: #fff; border-radius: 50%; box-shadow: 0 1px 2px rgba(0,0,0,.25); transition: transform .2s ease; }
-		html[data-theme="dark"] .switch input[type="checkbox"]::after { background: #111826; }
-		.switch input[type="checkbox"]:checked { background: var(--primary); border-color: var(--primary); }
-		.switch input[type="checkbox"]:checked::after { transform: translateX(18px); }
-	</style>
+	<meta http-equiv="refresh" content="0; url=./index.html">
+	<title>Переход…</title>
+	<script>window.location.replace('./index.html');</script>
 </head>
 <body>
-	<div class="container">
-		<div class="topbar">
-			<h1>Событие — генератор ссылки</h1>
-			<button class="icon-btn" id="themeBtn" title="Переключить тему">🌓</button>
-		</div>
-		<div class="card">
-			<div class="row">
-				<div>
-					<label for="title">Название события *</label>
-					<input id="title" type="text" placeholder="Например, День рождения" required>
-				</div>
-				<div class="switch">
-					<input id="allday" type="checkbox"> <label for="allday">Весь день</label>
-				</div>
-			</div>
-			<div class="row" style="margin-top: 12px;">
-				<div>
-					<label for="date">Дата</label>
-					<input id="date" type="date">
-				</div>
-				<div>
-					<label for="time">Время начала</label>
-					<input id="time" type="time">
-				</div>
-			</div>
-			<div class="row" style="margin-top: 12px;">
-				<div>
-					<label for="duration">Длительность (мин)</label>
-					<select id="duration">
-						<option value="15">15</option>
-						<option value="30" selected>30</option>
-						<option value="45">45</option>
-						<option value="60">60</option>
-						<option value="90">90</option>
-						<option value="120">120</option>
-					</select>
-				</div>
-				<div>
-					<label for="location">Место</label>
-					<input id="location" type="text" placeholder="Адрес или ссылка">
-				</div>
-			</div>
-			<div style="margin-top: 12px;">
-				<label for="notes">Описание/заметки</label>
-				<textarea id="notes" placeholder="Короткое описание, ссылки и т.д."></textarea>
-			</div>
-			<div class="actions">
-				<button class="btn" id="generateBtn">Сгенерировать ссылки</button>
-				<a id="icsDownload" class="btn-link hidden" download="event.ics">Скачать .ics (Apple/Outlook)</a>
-				<a id="googleLink" class="btn-link hidden" target="_blank" rel="noopener">Открыть в Google Calendar</a>
-				<a id="outlookLink" class="btn-link hidden" target="_blank" rel="noopener">Открыть в Outlook Web</a>
-				<button class="btn secondary" id="copyShareBtn" type="button">Скопировать ссылку для добавления</button>
-			</div>
-			<div class="muted">
-				Для iPhone: лучший способ — скачать .ics и открыть. Либо отправьте «ссылку для добавления»: у друга откроется страница и сразу предложит добавить событие.
-			</div>
-			<div id="result" class="result hidden">
-				Ссылки сгенерированы. Можно сразу делиться или скачать .ics.
-			</div>
-		</div>
-	</div>
-
-	<script>
-		function pad2(n) { return String(n).padStart(2, '0'); }
-		function toUtcIcsDateTime(date) {
-			const iso = date.toISOString();
-			return iso.replace(/[-:]/g, '').replace(/\.\d{3}Z$/, 'Z');
-		}
-		function toIcsDate(date) {
-			return `${date.getFullYear()}${pad2(date.getMonth() + 1)}${pad2(date.getDate())}`;
-		}
-		function escapeIcsText(text) {
-			return text
-				.replace(/\\/g, '\\\\')
-				.replace(/\n/g, '\\n')
-				.replace(/,/g, '\\,')
-				.replace(/;/g, '\\;');
-		}
-		function buildUid() { return `${Date.now()}-${Math.random().toString(36).slice(2)}@event.local`; }
-
-		function parseForm() {
-			const title = document.getElementById('title').value.trim();
-			const dateStr = document.getElementById('date').value;
-			const timeStr = document.getElementById('time').value;
-			const durationMin = parseInt(document.getElementById('duration').value, 10) || 30;
-			const location = document.getElementById('location').value.trim();
-			const notes = document.getElementById('notes').value;
-			const allDay = document.getElementById('allday').checked;
-			if (!title) throw new Error('Введите название события');
-			if (!dateStr) throw new Error('Выберите дату');
-			let startDate, endDate, isAllDay = allDay;
-			if (isAllDay) {
-				const d = new Date(`${dateStr}T00:00:00`);
-				startDate = d;
-				endDate = new Date(d.getTime() + 24 * 60 * 60000);
-			} else {
-				if (!timeStr) throw new Error('Выберите время начала');
-				const d = new Date(`${dateStr}T${timeStr}`);
-				startDate = d;
-				endDate = new Date(d.getTime() + durationMin * 60000);
-			}
-			return { title, startDate, endDate, location, notes, allDay: isAllDay };
-		}
-
-		function buildIcs(data) {
-			const lines = [];
-			lines.push('BEGIN:VCALENDAR');
-			lines.push('VERSION:2.0');
-			lines.push('PRODID:-//Event Configurator//RU');
-			lines.push('CALSCALE:GREGORIAN');
-			lines.push('METHOD:PUBLISH');
-			lines.push('BEGIN:VEVENT');
-			lines.push(`UID:${buildUid()}`);
-			lines.push(`DTSTAMP:${toUtcIcsDateTime(new Date())}`);
-			if (data.allDay) {
-				lines.push(`DTSTART;VALUE=DATE:${toIcsDate(data.startDate)}`);
-				lines.push(`DTEND;VALUE=DATE:${toIcsDate(data.endDate)}`);
-			} else {
-				lines.push(`DTSTART:${toUtcIcsDateTime(data.startDate)}`);
-				lines.push(`DTEND:${toUtcIcsDateTime(data.endDate)}`);
-			}
-			lines.push(`SUMMARY:${escapeIcsText(data.title)}`);
-			if (data.location) lines.push(`LOCATION:${escapeIcsText(data.location)}`);
-			if (data.notes) lines.push(`DESCRIPTION:${escapeIcsText(data.notes)}`);
-			lines.push('END:VEVENT');
-			lines.push('END:VCALENDAR');
-			return lines.join('\r\n');
-		}
-
-		function buildGoogleUrl(data) {
-			const text = encodeURIComponent(data.title);
-			const details = encodeURIComponent(data.notes || '');
-			const location = encodeURIComponent(data.location || '');
-			let dates;
-			if (data.allDay) {
-				const start = toIcsDate(data.startDate);
-				const end = toIcsDate(data.endDate);
-				dates = `${start}/${end}`;
-			} else {
-				const start = toUtcIcsDateTime(data.startDate);
-				const end = toUtcIcsDateTime(data.endDate);
-				dates = `${start}/${end}`;
-			}
-			const tz = encodeURIComponent((Intl.DateTimeFormat().resolvedOptions().timeZone) || 'UTC');
-			return `https://calendar.google.com/calendar/render?action=TEMPLATE&text=${text}&dates=${dates}&details=${details}&location=${location}&ctz=${tz}`;
-		}
-
-		function buildOutlookUrl(data) {
-			const subject = encodeURIComponent(data.title);
-			const body = encodeURIComponent(data.notes || '');
-			const location = encodeURIComponent(data.location || '');
-			const startdt = encodeURIComponent(data.startDate.toISOString());
-			const enddt = encodeURIComponent(data.endDate.toISOString());
-			return `https://outlook.live.com/calendar/0/deeplink/compose?subject=${subject}&body=${body}&location=${location}&startdt=${startdt}&enddt=${enddt}`;
-		}
-
-		function setDefaults() {
-			const now = new Date();
-			const year = now.getFullYear();
-			const month = pad2(now.getMonth() + 1);
-			const day = pad2(now.getDate());
-			const hours = pad2(now.getHours());
-			const minutes = pad2(now.getMinutes());
-			const dateEl = document.getElementById('date');
-			const timeEl = document.getElementById('time');
-			if (!dateEl.value) dateEl.value = `${year}-${month}-${day}`;
-			if (!timeEl.value) timeEl.value = `${hours}:${minutes}`;
-		}
-
-		function applyUrlParams() {
-			const q = new URLSearchParams(location.search);
-			const get = (k) => q.get(k) || '';
-			if (get('title')) document.getElementById('title').value = get('title');
-			if (get('date')) document.getElementById('date').value = get('date');
-			if (get('time')) document.getElementById('time').value = get('time');
-			if (get('duration')) document.getElementById('duration').value = get('duration');
-			if (get('location')) document.getElementById('location').value = get('location');
-			if (get('notes')) document.getElementById('notes').value = get('notes');
-			if (get('allday')) document.getElementById('allday').checked = get('allday') === '1';
-			if (document.getElementById('allday').checked) toggleAllDay(true);
-			const auto = get('auto') === '1';
-			const wantOpen = get('open') === '1';
-			if (auto || get('title') || get('date')) {
-				try {
-					generateLinks();
-					if (wantOpen) {
-						setTimeout(() => {
-							const a = document.getElementById('icsDownload');
-							if (a && a.href) {
-								try { a.click(); } catch (e) { window.location.href = a.href; }
-							}
-						}, 150);
-					}
-				} catch (e) {}
-			}
-		}
-
-		function toggleAllDay(force) {
-			const isAllDay = force !== undefined ? force : document.getElementById('allday').checked;
-			document.getElementById('time').disabled = isAllDay;
-			document.getElementById('duration').disabled = isAllDay;
-		}
-
-		function buildShareUrl() {
-			const title = encodeURIComponent(document.getElementById('title').value.trim());
-			const date = encodeURIComponent(document.getElementById('date').value);
-			const time = encodeURIComponent(document.getElementById('time').value);
-			const duration = encodeURIComponent(document.getElementById('duration').value);
-			const locationV = encodeURIComponent(document.getElementById('location').value.trim());
-			const notes = encodeURIComponent(document.getElementById('notes').value);
-			const allday = document.getElementById('allday').checked ? '1' : '0';
-			const url = `${location.origin}${location.pathname}?title=${title}&date=${date}&time=${time}&duration=${duration}&location=${locationV}&notes=${notes}&allday=${allday}&auto=1`;
-			return url;
-		}
-
-		function buildDirectOpenUrl() {
-			const title = encodeURIComponent(document.getElementById('title').value.trim());
-			const date = encodeURIComponent(document.getElementById('date').value);
-			const time = encodeURIComponent(document.getElementById('time').value);
-			const duration = encodeURIComponent(document.getElementById('duration').value);
-			const locationV = encodeURIComponent(document.getElementById('location').value.trim());
-			const notes = encodeURIComponent(document.getElementById('notes').value);
-			const allday = document.getElementById('allday').checked ? '1' : '0';
-			const url = `${location.origin}${location.pathname}?title=${title}&date=${date}&time=${time}&duration=${duration}&location=${locationV}&notes=${notes}&allday=${allday}&auto=1&open=1`;
-			return url;
-		}
-
-		function copy(text) {
-			if (navigator.clipboard && navigator.clipboard.writeText) return navigator.clipboard.writeText(text);
-			const ta = document.createElement('textarea');
-			ta.value = text; document.body.appendChild(ta); ta.select(); document.execCommand('copy'); document.body.removeChild(ta);
-			return Promise.resolve();
-		}
-
-		function generateLinks(ev) {
-			if (ev) ev.preventDefault();
-			try {
-				const data = parseForm();
-				const ics = buildIcs(data);
-				const blob = new Blob([ics], { type: 'text/calendar;charset=utf-8' });
-				const url = URL.createObjectURL(blob);
-				const icsA = document.getElementById('icsDownload');
-				icsA.href = url;
-				icsA.download = `${data.title.replace(/\s+/g, '_').slice(0, 40) || 'event'}.ics`;
-				icsA.classList.remove('hidden');
-				const g = document.getElementById('googleLink');
-				g.href = buildGoogleUrl(data);
-				g.classList.remove('hidden');
-				const o = document.getElementById('outlookLink');
-				o.href = buildOutlookUrl(data);
-				o.classList.remove('hidden');
-				document.getElementById('result').classList.remove('hidden');
-			} catch (e) {
-				alert(e.message || 'Ошибка при генерации');
-			}
-		}
-
-		function updateThemeBtn(theme) {
-			const btn = document.getElementById('themeBtn');
-			if (!btn) return;
-			btn.textContent = theme === 'dark' ? '🌙' : '☀️';
-		}
-		function applyTheme(theme) {
-			document.documentElement.setAttribute('data-theme', theme);
-			try { localStorage.setItem('theme', theme); } catch (e) {}
-			updateThemeBtn(theme);
-		}
-		function initTheme() {
-			let theme = 'light';
-			try { theme = localStorage.getItem('theme') || theme; } catch (e) {}
-			if (!theme) theme = (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) ? 'dark' : 'light';
-			applyTheme(theme);
-		}
-
-		window.addEventListener('load', () => {
-			initTheme();
-			setDefaults();
-			applyUrlParams();
-			document.getElementById('allday').addEventListener('change', () => toggleAllDay());
-			document.getElementById('generateBtn').addEventListener('click', generateLinks);
-			document.getElementById('copyShareBtn').addEventListener('click', async () => {
-				const url = buildDirectOpenUrl();
-				await copy(url);
-				const el = document.getElementById('result');
-				el.textContent = 'Ссылка для добавления скопирована. Отправьте её — у получателя откроется добавление в Календарь.';
-				el.classList.remove('hidden');
-			});
-			document.getElementById('themeBtn').addEventListener('click', () => {
-				const next = document.documentElement.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
-				applyTheme(next);
-			});
-			toggleAllDay();
-		});
-	</script>
+	Если перенаправление не сработало, откройте <a href="./index.html">index.html</a>.
 </body>
 </html>
