--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 	<div class="container">
 		<div class="topbar">
 			<h1>Событие — генератор ссылки</h1>
-			<button class="icon-btn" id="themeBtn" title="Переключить тему">🌓</button>
+			<div class="btns">
+				<button class="icon-btn" id="motionBtn" title="Эффект движения (гироскоп)">🎛️</button>
+				<button class="icon-btn" id="themeBtn" title="Переключить тему">🌓</button>
+			</div>
 		</div>
 		<div class="card" id="card">
 			<div class="row">
