--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
 						<button type="button" data-min="180">3ч</button>
 						<button type="button" data-min="240">4ч</button>
 					</div>
+					<div class="mobile-only" id="durationSelectWrap" aria-hidden="true">
+						<select id="durationSelect">
+							<option value="15">15 мин</option>
+							<option value="30" selected>30 мин</option>
+							<option value="45">45 мин</option>
+							<option value="60">1 час</option>
+							<option value="90">1.5 часа</option>
+							<option value="120">2 часа</option>
+							<option value="180">3 часа</option>
+							<option value="240">4 часа</option>
+						</select>
+					</div>
 				</div>
 				<div>
 					<label for="location">Место</label>
