--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 	<div class="container">
 		<div class="topbar">
 			<h1>Событие — генератор ссылки</h1>
-			<button class="icon-btn" id="themeBtn" title="Переключить тему">🌓</button>
+			<div class="btns">
+				<button class="icon-btn" id="themeBtn" title="Переключить тему">🌓</button>
+			</div>
 		</div>
 		<div class="card" id="card">
 			<div class="row">
@@ -57,18 +59,6 @@
 						<button type="button" data-min="120">2ч</button>
 						<button type="button" data-min="180">3ч</button>
 						<button type="button" data-min="240">4ч</button>
-					</div>
-					<div class="mobile-only" id="durationSelectWrap" aria-hidden="true">
-						<select id="durationSelect">
-							<option value="15">15 мин</option>
-							<option value="30" selected>30 мин</option>
-							<option value="45">45 мин</option>
-							<option value="60">1 час</option>
-							<option value="90">1.5 часа</option>
-							<option value="120">2 часа</option>
-							<option value="180">3 часа</option>
-							<option value="240">4 часа</option>
-						</select>
 					</div>
 				</div>
 				<div>
